fixing image names

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- 2.Elements of Data Visualization CS329E-->
       <tr class="projectitem" onclick="window.location.href='dv329E.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
         <td class="imgpeak">
-          <img src="imgs/dv329E_prevImg.png" style="width:100%">
+          <img src="imgs/dv329e_previmg.png" style="width:100%">
         </td>
         <td class="projpeak">
           <h3>Elements of Data Visualization CS329E</h3>
