--- a/index_highlights.html
+++ b/index_highlights.html
@@ -62,7 +62,7 @@
       <!-- 4. Senior Capstone ME366J-->
       <tr class="projectitem" onclick="window.location.href='ME366J.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
         <td class="imgpeak">
-          <img src="imgs/ME366J_prevImg.png" style="width:100%">
+          <img src="imgs/ME266J_prevImg.png" style="width:100%">
         </td>
         <td class="projpeak">
           <h3>Senior Capstone ME366J</h3>
@@ -82,7 +82,7 @@
       <!-- 2.Elements of Data Visualization CS329E-->
       <tr class="projectitem" onclick="window.location.href='dv329E.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
         <td class="imgpeak">
-          <img src="imgs/dv329E_prevImg.png" style="width:100%">
+          <img src="imgs/dv329e_previmg.png" style="width:100%">
         </td>
         <td class="projpeak">
           <h3>Elements of Data Visualization CS329E</h3>
