update to index and ftc pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div style="width:50%;float:right">
       <h2>Welcome!</h2>
-      <h3>The following page is my engineering portfolio. To contact me for more info:<br /><br />Email: <a href="mailto:WilliamSmylie0@gmail.com">WilliamSmylie0@gmail.com</a><br />Phone: <!--<a href="tel:+15123783149">512-378-3149</a>-->+1-512-378-3149<br /><a href="https://www.linkedin.com/in/william-smylie/">Linkedin</a><br /><a href="SmylieResume.pdf">Resume</a></h3>
+      <p>My name is William Smylie. I am a mechanical engineer with a passion for robotics and automation. I graduated from the University of Texas at Austin with a BS in mechanical engineering and a minor in computer science. There are two organization methods for this portfolio, chronologically and by order of my highlights - simply select the option you prefer below. Click any project to visit its dedicated page. To contact me for more info:<br />Email: <a href="mailto:WilliamSmylie0@gmail.com">WilliamSmylie0@gmail.com</a><br />Phone: <!--<a href="tel:+15123783149">512-378-3149</a>-->+1-512-378-3149<br /><a href="https://www.linkedin.com/in/william-smylie/">Linkedin</a><br /><a href="SmylieResume.pdf">Resume</a></p>
     </div>
   </div>
   <div style="width:100%;height:100px;float:left"></div>
