updates for style
remove underline on organization
fix link to web dev

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h3>Chronological</h3>
         </td>
         <td style="width:50%">
-          <a href="index_highlights.html"><h3 style="color:#FFFFFF">Highlights</h3></a>
+          <a href="index_highlights.html"><h3 style="color:#FFFFFF;text-decoration: none;">Highlights</h3></a>
         </td>
       </tr>
     </table>
