--- a/index_highlights.html
+++ b/index_highlights.html
@@ -30,7 +30,7 @@
     <table style="width:70%;margin:auto;border: 2px solid #FFFFFF;">
       <tr>
         <td style="width:50%">
-          <a href="index.html"><h3 style="color:#FFFFFF">Chronological</h3></a>
+          <a href="index.html"><h3 style="color:#FFFFFF;text-decoration: none;">Chronological</h3></a>
         </td>
         <td style="width:50%;background-color:#36363D">
           <h3>Highlights</h3>
@@ -67,6 +67,16 @@
         <td class="projpeak">
           <h3>Senior Capstone ME366J</h3>
           <p>The fall capstone project was a full case study from consumer interest survey to finished prototype. This year, the project was designing a food sculptor. My main roles were electronics, mechatronics, software, and construction.</p>
+        </td>
+      </tr>
+      <!-- 7.Arist-->
+      <tr class="projectitem" onclick="window.location.href='arist.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
+        <td class="imgpeak">
+          <img src="imgs/arist_prevImg.png" style="width:100%">
+        </td>
+        <td class="projpeak">
+          <h3>Aristocrat Robotics Internship 2021</h3>
+          <p>This internship focused on taking a proof-of-concept robotics pitch and developing it into a version that was viable for long term use and production.</p>
         </td>
       </tr>
       <!-- 10.ARL Honors Student Internship 2019-->
@@ -110,23 +120,13 @@
         </td>
       </tr>
       <!-- 6.Elements of Web Programming CS329E-->
-      <tr class="projectitem" onclick="window.location.href='wp329E.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
+      <tr class="projectitem" onclick="window.location.href='CSWebDevSite/index.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
         <td class="imgpeak">
           <img src="imgs/wp329E_prevImg.png" style="width:100%">
         </td>
         <td class="projpeak">
           <h3>Elements of Web Programming CS329E</h3>
           <p>This classwork included HTML, CSS, web page design principles, PHP, JS, and JQuery. My full semester website can be found here.</p>
-        </td>
-      </tr>
-      <!-- 7.Arist-->
-      <tr class="projectitem" onclick="window.location.href='arist.html';"> <!-- this link style is technically probably bad practice, and I should be using jQuery or true javascript document-->
-        <td class="imgpeak">
-          <img src="imgs/arist_prevImg.png" style="width:100%">
-        </td>
-        <td class="projpeak">
-          <h3>Aristocrat Robotics Internship 2021</h3>
-          <p>This internship focused on taking a proof-of-concept robotics pitch and developing it into a version that was viable for long term use and production.</p>
         </td>
       </tr>
       <!-- 8.Performance Robotics ES377-->
